--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,15 @@
 streamlit
 streamlit_image_select
 faiss-cpu
-deepface
+deepface==0.0.92
 CLIP @ git+https://github.com/openai/CLIP.git
 matplotlib
 scikit-learn
 transformers
 opencv-python
 tf-keras
+ranx
+numpy
+pandas
+Pillow
+torch
